--- a/src/scss/partners.scss
+++ b/src/scss/partners.scss
@@ -1,6 +1,6 @@
 #partners {
     .bgimg {
-        background-image: url("C:/Projects/website(2)/src/assets/sectionbg.jpg");
+        background-image: url("../assets/sectionbg.jpg");
         background-size: cover;
         background-repeat: no-repeat;
         height: 522px;
@@ -56,7 +56,7 @@
 
     #partners {
         .bgimg {
-            background-image: url("C:/Projects/website(2)/src/assets/sectionbg.jpg");
+            background-image: url("../assets/sectionbg.jpg");
             background-size: cover;
             background-repeat: no-repeat;
             height: 42rem;
@@ -117,7 +117,7 @@
 
     #partners {
         .bgimg {
-            background-image: url("C:/Projects/website(2)/src/assets/sectionbg.jpg");
+            background-image: url("../assets/sectionbg.jpg");
             background-size: cover;
             background-repeat: no-repeat;
             height: 39rem;
@@ -177,7 +177,7 @@
 
         #partners {
             .bgimg {
-                background-image: url("C:/Projects/website(2)/src/assets/sectionbg.jpg");
+                background-image: url("../assets/sectionbg.jpg");
                 background-size: cover;
                 background-repeat: no-repeat;
                 height: 39rem;
@@ -237,7 +237,7 @@
 @media only screen and (max-width: 1030px) {
     #partners {
         .bgimg {
-            background-image: url("C:/Projects/website(2)/src/assets/sectionbg.jpg");
+            background-image: url("../assets/sectionbg.jpg");
             background-size: cover;
             background-repeat: no-repeat;
             height: 23rem;
